--- a/TeamPage.html
+++ b/TeamPage.html
@@ -7,7 +7,40 @@
       margin: 20px;
       line-height: 1.5;
     }
-    
+
+    /* Fixed navigation bar */
+    .navbar {
+      background-color: #333;
+      overflow: hidden;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+    }
+
+    .navbar ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    .navbar li {
+      float: left;
+    }
+
+    .navbar a {
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+
+    .navbar a:hover,
+    .navbar .active {
+      background-color: #4CAF50;
+    }
+
     h1 {
       margin-top: 120px;
       text-align: center;
@@ -42,6 +75,17 @@
   </style>
 </head>
 <body>
+
+  <!-- Navigation -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">News</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a class="active" href="#">Staff</a></li>
+    </ul>
+  </nav>
+
   <!-- Page Title -->
   <h1>Our Team</h1>
 
