--- a/TeamPage.html
+++ b/TeamPage.html
@@ -101,7 +101,7 @@
 
     <div class="member">
       <div class="position-title">Shinchan Nohara, <em>Internal Communications and consultant</em></div>
-      <img src="" alt="Shinchan Nohara">
+      <img src="images/ShinchanNohara.png" alt="Shinchan Nohara">
       <p>
         Shinnosuke Nohara, widely known as Shinchan is from Japan. He has a mature sense of humor and a talent for creating the environment lively. He's quick witted, unique, and fearless which makes him a viral sensation. As a Internal Communications Consultant, Shinchan crafts weekly newsletters, organizes important events, and even helps out HR announcements. He works hard to make everyone feel stress free and smile high. He is also respinsible for consulting with clients, making them understand the importance and interested in working together.
       </p>
