--- a/TeamPage.html
+++ b/TeamPage.html
@@ -85,7 +85,7 @@
 
     <div class="member">
       <div class="position-title">Pikachu, <em>CEO</em></div>
-      <img src="" alt="Pikachu">
+      <img src="images/Pikachu.jpeg" alt="Pikachu">
       <p>
         Coming from the Kanto region, Pikachu is battle companion that has evolved into a symbol of high-voltage energy. He's known for his signature 'Pika-Pika' and quick reactions. As our CEO, Pikachu leads our company with sharp decision making and strong determination. He is loyal and a fierce stragegist that leads the team to push through boundaries daily. He works with each member of the Team, talking about concerns and goals, guiding them through challenges. Pikachu’s quick thinking and positive charge keep the Team moving forward. Under his leadership, no challenge is too shocking to handle.
       </p>
