--- a/TeamPage.html
+++ b/TeamPage.html
@@ -93,7 +93,7 @@
 
     <div class="member">
       <div class="position-title">Doraemon, <em>Director of research and Development</em></div>
-      <img src="" alt="Doraemon">
+      <img src="images/Doraemon.jpeg" alt="Doraemon">
       <p>
         Doraemon is a 22nd century cat robot who traveled back in time to support a struggling boy, Nobita Nobi. He has advanced gadgets and a genius level understanding of technology. He's calm, analytical, and loyal. Now, he is serving as the Director of Research and Technology (R&D Director), contributing in developing new gadget that help us advance. Whether it’s automating repetitive tasks or developing new tools for collaboration, he’s always one step ahead. He also provides on-demand gadget assistance that he stores in his 3 dimensional pocket.
       </p>
