--- a/TeamPage.html
+++ b/TeamPage.html
@@ -109,7 +109,7 @@
 
     <div class="member">
       <div class="position-title">SpongeBob SquarePants, <em>Chief of Human Resources</em></div>
-      <img src="" alt="SpongeBob">
+      <img src="images/SpongeBobSP.jpeg" alt="SpongeBob">
       <p>
         SpongeBob was born and raised in Bikini Bottom. He is known for his optimism, kindness, his ability to arrange events in a fun and engaging way. He has gained deeper understanding of workplace dynamics after managing grumpy coworkers like Squidward. Today, as the Chief of Human Resources, SpongeBob ensures that every employee feels valued and appreciated. He holds events for team building and morale boosting which helps the workers work in a more relaxed environment. With SpongeBob at the helm, our HR department runs on empathy, fun, and jellyfish jelly sandwiches.
       </p>
