--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="colorScheme.html">Assignment 3.2 Color Scheme</a><br>
       <a href="RestaurantMenu.html">Assignment 3.4 Restaurant Menu</a><br>
       <a href="StylishSchedule.html">Assignment 3.6 Stylish Schedule</a><br>
-      <a href="TeamPage.html">Assignment 4.2 Team Page</a><br>
+      <a href="TeamPage.html">Assignment 4.2 Team Page!</a><br>
     </p>
     
   </body>
