--- a/TeamPage.html
+++ b/TeamPage.html
@@ -38,7 +38,7 @@
     }
 
     h1 {
-      margin-top: 120px;
+      margin-top: 90px;
       text-align: center;
       font: 'Garamond', serif;
     }
@@ -79,7 +79,8 @@
 
   <!-- Page Title -->
   <h1>Our Team</h1>
-
+    <p style="text-align=center;">Meet the member of Our Team!</p>
+  
   <!-- Team Grid -->
   <div class="team-grid">
 
