--- a/TeamPage.html
+++ b/TeamPage.html
@@ -79,7 +79,7 @@
 
   <!-- Page Title -->
   <h1>Our Team</h1>
-    <p style="text-align=center;">Meet the member of Our Team!</p>
+    <p style="text-align=center;">Meet the members of Our Team!</p>
   
   <!-- Team Grid -->
   <div class="team-grid">
