--- a/TeamPage.html
+++ b/TeamPage.html
@@ -40,7 +40,7 @@
     h1 {
       margin-top: 90px;
       text-align: center;
-      font: 'Garamond', serif;
+      font: 'Garamond', cursive;
     }
 
     .team-grid {
