--- a/teamPage.html
+++ b/teamPage.html
@@ -70,10 +70,10 @@
   <!-- Navigation -->
   <nav class="navbar">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">News</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a class="active" href="#">Team</a></li>
+      <li><a href="">Home</a></li>
+      <li><a href="">News</a></li>
+      <li><a href="">Contact</a></li>
+      <li><a class="active" href="">Team</a></li>
     </ul>
   </nav>
 
