--- a/puzzle.html
+++ b/puzzle.html
@@ -6,10 +6,10 @@
     <title>Fish Puzzle</title>
     <style>
       .container {
-        display: ;
-        flex-direction: ;
+        display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
-        width: ;
+        width: 2600px;
   
       .hidden (
         display: none;
@@ -19,10 +19,19 @@
   <body>
     <h1>A Fishy Puzzle</h1>
 
-    <div class="">
-      <img src="">
-      <img src="">
-      <img src="">
-      <img src="">
+    <div class="container">
+      <img src="images/P1.jpg">
+      <img src="images/P2.jpg">
+      <img src="images/P3.jpg">
+      <img src="images/P4.jpg">
+      <img src="images/P5.jpg">
+      <img src="images/P6.jpg">
+      <img src="images/P7.jpg">
+      <img src="images/P8.jpg">
+      <img src="images/P9.jpg">
+      <img src="images/P10.jpg">
+      <img src="images/P11.jpg">
+      <img src="images/P12.jpg">
+      <img src="images/P13.jpg" class="hidden">
   </body>
 </html>
