--- a/puzzle.html
+++ b/puzzle.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale-1.0">
-    <title>Fish Puzzle</title>
+    <title>Snowmen Puzzle</title>
     <style>
       .container {
         display: flex;
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <h1>A Fishy Puzzle</h1>
+    <h1>A Snowmen Puzzle</h1>
 
     <div class="container">
       <img src="images/P1.jpg">
