--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       <a href="newsWebsite.html">Assignment 1.6 My News Hub</a><br>
       <a href="StarterGallery.html">Assignment 2.2 Starter Gallery</a><br>
       <a href="EmployeeInfoTable.html">Assignment 2.4 Building Tables</a><br>
-      <a href="MathTest.html">Assignment 2.6 Math Test Form</a><br>
+      <a href="mathTest.html">Assignment 2.6 Math Test Form</a><br>
       <a href="colorScheme.html">Assignment 3.2 Color Scheme</a><br>
       <a href="RestaurantMenu.html">Assignment 3.4 Restaurant Menu</a><br>
       <a href="StylishSchedule.html">Assignment 3.6 Stylish Schedule</a><br>
-      <a href="TeamPage.html">Assignment 4.2 Team Page</a><br>
+      <a href="teamPage.html">Assignment 4.2 Team Page</a><br>
+      <a href="puzzle.html">Assignment 4.4 Puzzle</a><br>
     </p>
     
   </body>
