--- a/puzzle.html
+++ b/puzzle.html
@@ -7,9 +7,9 @@
     <style>
       .container {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         flex-wrap: wrap;
-        width: 2600px;
+        width: 400px;
   
       .hidden (
         display: none;
