--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="RestaurantMenu.html">Assignment 3.4 Restaurant Menu</a><br>
       <a href="StylishSchedule.html">Assignment 3.6 Stylish Schedule</a><br>
       <a href="teamPage.html">Assignment 4.2 Team Page</a><br>
-      <a href="puzzle.html">Assignment 4.4 Puzzle</a><br>
+      <a href="puzzle.html">Assignment 4.4 Puzzle!</a><br>
     </p>
     
   </body>
