--- a/puzzle.html
+++ b/puzzle.html
@@ -7,9 +7,9 @@
     <style>
       .container {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         flex-wrap: wrap;
-        width: 400px;
+        width: 600px;
   
       .hidden (
         display: none;
