--- a/puzzle.html
+++ b/puzzle.html
@@ -9,8 +9,8 @@
         flex-direction: row;
         flex-wrap: wrap;
         width: 600px;
-  
-      .hidden (
+      }
+      .hidden {
         display: none;
       }
     </style>
