--- a/puzzle.html
+++ b/puzzle.html
@@ -32,5 +32,6 @@
       <img src="images/P8.jpg">
       <img src="images/P9.jpg">
       <img src="images/P3.jpg" class="hidden">
+    </div>
   </body>
 </html>
