--- a/puzzle.html
+++ b/puzzle.html
@@ -18,6 +18,9 @@
   <body>
     <h1>A Snowmen Puzzle</h1>
 
+    <p style="text-align: left;"><b>Name: </b>Javeria Shaik <br>
+      <b>Date: </b>May 14, 2025</p>
+    
     <div class="container">
       <img src="images/P11.jpg">
       <img src="images/P13.jpg">
