--- a/puzzle.html
+++ b/puzzle.html
@@ -13,12 +13,16 @@
       .hidden {
         display: none;
       }
+      h1 {
+        text-align: center;
+        font-family: 'Garamond', serif;
+      }
     </style>
   </head>
   <body>
     <h1>A Snowmen Puzzle</h1>
 
-    <p style="text-align: left;"><b>Name: </b>Javeria Shaik <br>
+    <p style="text-align: right;"><b>Name: </b>Javeria Shaik <br>
       <b>Date: </b>May 14, 2025</p>
     
     <div class="container">
