--- a/puzzle.html
+++ b/puzzle.html
@@ -14,15 +14,18 @@
         display: none;
       }
       h1 {
-        text-align: center;
         font-family: 'Garamond', serif;
+        font-size: 28px
+      }
+      p {
+        font-size: 18px;
       }
     </style>
   </head>
   <body>
     <h1>A Snowmen Puzzle</h1>
 
-    <p style="text-align: right;"><b>Name: </b>Javeria Shaik <br>
+    <p><b>Name: </b>Javeria Shaik <br>
       <b>Date: </b>May 14, 2025</p>
     
     <div class="container">
