--- a/bowling.html
+++ b/bowling.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <title>Bowling Scorecard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="scorecard.css" />
+  <link rel="stylesheet" href="scorecard.css"/>
 </head>
 <body>
   <h1>Bowling Scorecard</h1>
