--- a/baseball.html
+++ b/baseball.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8"/>
     <title>Baseball Scorecard</title>
-    <link rel="stylesheet" href="scorecard.css" />
+    <link rel="stylesheet" href="scorecard.css"/>
   </head>
   <body>
     <h1>Baseball Scorecard</h1>
