--- a/teamPage.html
+++ b/teamPage.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>Our Team</title>
   <style>
@@ -116,6 +117,5 @@
       </p>
     </div>
   </div>
-
 </body>
 </html>
