--- a/scorecardHomePage.html
+++ b/scorecardHomePage.html
@@ -50,10 +50,10 @@
   <!-- Navigation -->
   <nav class="navbar">
     <ul>
-      <li><a class="active" href="">Home</a></li>
-      <li><a href="">Football</a></li>
-      <li><a href="">Baseball</a></li>
-      <li><a href="">Home</a></li>
+      <li><a class="active" href="scorecardHomePage.html">Home</a></li>
+      <li><a href="football.html">Football</a></li>
+      <li><a href="baseball.html">Baseball</a></li>
+      <li><a href="bowling.html">Bowling</a></li>
     </ul>
   </nav>
 
