--- a/baseball.html
+++ b/baseball.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="scorecard.css"/>
   </head>
   <body>
+    <nav class="navbar">
+      <ul>
+        <li><a class="active" href="scorecardHomePage.html">Home</a></li>
+        <li><a href="football.html">Football</a></li>
+        <li><a href="baseball.html">Baseball</a></li>
+        <li><a href="bowling.html">Bowling</a></li>
+      </ul>
+    </nav>
     <h1>Baseball Scorecard</h1>
     <table>
       <thead>
