--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="StylishSchedule.html">Assignment 3.6 Stylish Schedule</a><br>
       <a href="teamPage.html">Assignment 4.2 Team Page</a><br>
       <a href="puzzle.html">Assignment 4.4 Puzzle</a><br>
-      <a href="scorecardHomePage.html">Assignment 4.6 Scorecards</a><br>
+      <a href="scorecardHomePage.html">Assignment 4.6 Scorecards!</a><br>
       
     </p>
     
