--- a/football.html
+++ b/football.html
@@ -8,8 +8,8 @@
 <body>
   <nav class="navbar">
     <ul>
-      <li><a class="active" href="scorecardHomePage.html">Home</a></li>
-      <li><a href="football.html">Football</a></li>
+      <li><a href="scorecardHomePage.html">Home</a></li>
+      <li><a class="active" href="football.html">Football</a></li>
       <li><a href="baseball.html">Baseball</a></li>
       <li><a href="bowling.html">Bowling</a></li>
     </ul>
