--- a/bowling.html
+++ b/bowling.html
@@ -8,10 +8,10 @@
 <body>
   <nav class="navbar">
     <ul>
-      <li><a class="active" href="scorecardHomePage.html">Home</a></li>
+      <li><a href="scorecardHomePage.html">Home</a></li>
       <li><a href="football.html">Football</a></li>
       <li><a href="baseball.html">Baseball</a></li>
-      <li><a href="bowling.html">Bowling</a></li>
+      <li><a class="active" href="bowling.html">Bowling</a></li>
     </ul>
   </nav>
   <h1>Bowling Scorecard</h1>
