--- a/scorecardHomePage.html
+++ b/scorecardHomePage.html
@@ -43,6 +43,12 @@
       text-align: center;
       font-family: cursive;
     }
+
+    img {
+      align: center;
+      height: 250px;
+      width: 300px;
+    }
   </style>
 </head>
 <body>
@@ -60,5 +66,6 @@
   <!-- Page Title -->
   <h1>Scorecard Web!</h1>
     <p style="text-align: center;">Welcome! Here you can find three different scorecards. Click on the navigation bar above to visit the each sport's scorecard.</p>
+    <img src="" alt="Team A vs Team B image"/>
 </body>
 </html>
