--- a/scorecardHomePage.html
+++ b/scorecardHomePage.html
@@ -66,6 +66,6 @@
   <!-- Page Title -->
   <h1>Scorecard Web!</h1>
     <p style="text-align: center;">Welcome! Here you can find three different scorecards. Click on the navigation bar above to visit the each sport's scorecard.</p>
-    <img src="" alt="Team A vs Team B image"/>
+    <img src="images/Scoring.jpeg" alt="Team A vs Team B image"/>
 </body>
 </html>
