--- a/scorecardHomePage.html
+++ b/scorecardHomePage.html
@@ -45,7 +45,8 @@
     }
 
     img {
-      align: center;
+      display: block;
+      margin: 0 auto;
       height: 250px;
       width: 300px;
     }
