--- a/videoTutorial.html
+++ b/videoTutorial.html
@@ -13,43 +13,43 @@
           <div class="step">
               <h2>Step 1: Go to the YouTube Video and click on share button</h2>
               <p>Open the YouTube video you want to embed. For this example, we’ll use a video titled <strong>"HTML & CSS - How to Embed a YouTube Video in Your Website"</strong>. Click the share button under the video.</p>
-              <img src="" alt="Step 1 - Open the YouTube video and click share">
+              <img src="images/Step1.png" alt="Step 1 - Open the YouTube video and click share">
           </div>
   
           <div class="step">
               <h2>Step 2: Select the Embed Option</h2>
               <p>When you click on share, it will open sharing options. Click the first option <strong>Embed</strong>.</p>
-              <img src="" alt="Step 2 - Click on Embed from the sharing options">
+              <img src="images/Step2.png" alt="Step 2 - Click on Embed from the sharing options">
           </div>
   
           <div class="step">
               <h2>Step 3: Copy the Embed Code</h2>
               <p>When you click on Embed, it will show you the HTML code needed to embed the video. Click the <strong>Copy</strong> button to copy the embed code to your clipboard.</p>
-              <img src="" alt="Step 3 - Copy the embed code">
+              <img src="images/Step3.png" alt="Step 3 - Copy the embed code">
           </div>
   
           <div class="step">
               <h2>Step 4: Paste the Code into Your HTML Page</h2>
               <p>Open your HTML file and paste the embed code where you want the video to appear.</p>
-              <img src="" alt="Step 4 - Paste embed code into HTML">
+              <img src="images/Step4.png" alt="Step 4 - Paste embed code into HTML">
           </div>
   
           <div class="step">
               <h2>Step 5: Create a div and add a class to add modifications to your embed video.</h2>
               <p>Create a div to make changes to the width and height. refer the image below. Then move your embed code into the div. Change height and width accordingly. In this example we changed the width and height to 100%.</p>
-              <img src="" alt="Step 5 - add a div">
+              <img src="images/Step5.png" alt="Step 5 - add a div">
           </div>
 
         <div class="step">
               <h2>Step 6: Create a css file</h2>
               <p>Create the class in the css file to set the width and height of the video.</p>
-              <img src="" alt="Step 6 - create the class in a css file">
+              <img src="images/Step6.png" alt="Step 6 - create the class in a css file">
           </div>
 
         <div class="step">
               <h2>Step 7: Use the website to get the perfect dimentions</h2>
               <p>If you are not sure what are the perfect dimentions for the video, use can use the website aspectratiocalculator.com. When you type in the width, it'll automatically give you the height.</p>
-              <img src="" alt="Step 7 - Dimentions">
+              <img src="images/Step7.png" alt="Step 7 - Dimentions">
           </div>
   
           <div class="example">
