--- a/videoTutorial.html
+++ b/videoTutorial.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="UTF-8">
       <title>How to Embed a YouTube Video</title>
-      <link rel="stylesheet" href="Tutorial.css">
+      <link rel="stylesheet" href="tutorial.css">
   </head>
   <body>
       <div class="container">
