--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="puzzle.html">Assignment 4.4 Puzzle</a><br>
       <a href="scorecardHomePage.html">Assignment 4.6 Scorecards</a><br>
       <a href="scorecard.css">Assignment 4.6 Scorecards</a><br>
-      <a href="videoTutorial.html">Assignment 5.2 Embed Video Tutorial</a><br>
+      <a href="videoTutorial.html">Assignment 5.2 Video Embedding Tutorial</a><br>
       
     </p>
     
