--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       <a href="teamPage.html">Assignment 4.2 Team Page</a><br>
       <a href="puzzle.html">Assignment 4.4 Puzzle</a><br>
       <a href="scorecardHomePage.html">Assignment 4.6 Scorecards</a><br>
-      <a href="scorecard.css">Assignment 4.6 Scorecards</a><br>
+      <a href="scorecard.css">Assignment 4.6 Scorecards (css file)</a><br>
       <a href="videoTutorial.html">Assignment 5.2 Video Embedding Tutorial</a><br>
+      <a href="tutorial.css">Assignment 5.2 Video Embedding Tutorial (css file)</a><br>
       
     </p>
     
