--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <a href="scorecard.css">Assignment 4.6 Scorecards (css file)</a><br>
       <a href="videoTutorial.html">Assignment 5.2 Video Embedding Tutorial</a><br>
       <a href="tutorial.css">Assignment 5.2 Video Embedding Tutorial (css file)</a><br>
+      <a href="imitation.html">Assignment 5.4 Imitation</a><br>
       
     </p>
     
