--- a/imitation.html
+++ b/imitation.html
@@ -12,7 +12,7 @@
     <div class="image dinosaur"></div>
     <div class="image seagull"></div>
     <div class="image butterfly"></div>
-    <div class="image theater"></div>
+    <div class="image theater">Presenting</div>
   </div>
 </body>
 </html>
