--- a/imitation.html
+++ b/imitation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>CSS3 Image Projects</title>
+  <title>Imitation Project</title>
   <link rel="stylesheet" href="imitateFeatures.css" />
 </head>
 <body>
