--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a href="videoTutorial.html">Assignment 5.2 Video Embedding Tutorial</a><br>
       <a href="tutorial.css">Assignment 5.2 Video Embedding Tutorial (css file)</a><br>
       <a href="imitation.html">Assignment 5.4 Imitation</a><br>
+      <a href="businessHome.html">Final Small Business</a><br>
       
     </p>
     
