--- a/businessHome.html
+++ b/businessHome.html
@@ -23,7 +23,7 @@
   </header>
 
   <main>
-    <section class="hero">
+    <section class="headline">
       <div class="container">
         <h1>Welcome to The Magical Café</h1>
         <p>Your neighborhood hub for great coffee, good vibes, and community connections.</p>
