--- a/gallery.html
+++ b/gallery.html
@@ -25,10 +25,10 @@
   <main class="container">
     <h1>Photo Gallery</h1>
     <div class="gallery-grid">
-      <img src="" alt="Café Interior" />
-      <img src="" alt="Coffee Cup" />
-      <img src="" alt="Open Mic Night" />
-      <img src="" alt="Art Wall" />
+      <img src="images/cafeInterior.jpeg" alt="Café Interior" />
+      <img src="images/coffeeCup.jpeg" alt="Coffee Cup" />
+      <img src="images/openMic.jpeg" alt="Open Mic Night" />
+      <img src="images/artWall.jpeg" alt="Art Wall" />
     </div>
   </main>
 
