--- a/businessHome.html
+++ b/businessHome.html
@@ -38,7 +38,7 @@
           <p>Founded in 2015, The Magical Café is more than just a coffee shop — it's a community space. We serve ethically sourced coffee, homemade pastries, and feature local artists and musicians every week.</p>
           <a href="about.html" class="btn-small">Learn More</a>
         </div>
-        <img src="" alt="Inside The Magical Café" />
+        <img src="images/cafeInterior.jpeg" alt="Inside The Magical Café" />
       </div>
     </section>
 
