--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <div class="menu">
     <div class="container">
       <nav>
         <ul>
@@ -46,6 +47,7 @@
       <li>Quiche Slice - $4.50</li>
     </ul>
   </main>
+</div>
 
   <footer>
     <div class="container">
