--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="business.css" />
 </head>
 <body>
-  <div class="menu">
     <header>
       <div class="container">
         <nav>
@@ -23,7 +22,7 @@
       </div>
     </header>
   
-    <main class="container">
+    <main class="container menu">
       <h1>Our Menu</h1>
       <h2>Coffee & Espresso</h2>
       <ul>
@@ -47,7 +46,6 @@
         <li>Quiche Slice - $4.50</li>
       </ul>
     </main>
-  </div>
 
   <footer>
     <div class="container">
