--- a/imitation.html
+++ b/imitation.html
@@ -8,11 +8,19 @@
 <body>
   <div class="gallery">
     <div class="image penguins"></div>
-    <div class="image football-field"></div>
+<div class="football-wrapper">
+  <div class="football-frame">
+    <div class="football-field"></div>
+  </div>
+</div>
     <div class="image dinosaur"></div>
     <div class="image seagull"></div>
     <div class="image butterfly"></div>
-    <div class="image theater">Presenting</div>
+<div class="theater-wrapper">
+  <div class="theater-blur"></div>
+  <div class="theater-text">Presenting</div>
+</div>
+
   </div>
 </body>
 </html>
